feat : finish game

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<title>new</title>
 </head>
 
-<body>
+<body class="body"  >
 	<button class="start">Start</button>
-	<input class="input" type="number" placeholder="Введите число!">
-	<button class="button" >ПРОВЕРИТЬ</button>
+	<input class="input" type="number" placeholder="Number!">
+	<button class="button" >Сheck </button>
 	<div class="text"></div>
 	<script src="js/main.js"></script>
 </body>
